# Ratatouille

./: .gitignore  README.md  audio_data_3200.csv  pyproject.toml  recorded_audio.npy
IMU Data/: CSVtoGraph.py  bode.py  fft.py
TEMP/: REKF.py  click_bandpass_high_F.py  click_bandpass_low_F.py  click_banpass_high_F.py  filters.py  imu_outputs  outputs.py  prototypes.py  serial_pipeline.py
firmware - stable/Nucleo_audio/: .project  Nucleo_audio.ioc  Nucleo_audio.launch
firmware - stable/Nucleo_audio_timing/: .project  Nucleo_audio_timing Debug.launch
firmware - stable/Nucleo_fusion/: .cproject  .mxproject  .project  Nucleo_fusion Debug.launch  Nucleo_fusion.ioc
firmware - stable/Nucleo_fusion_timing/: .project  Nucleo_fusion_timing.launch
firmware/PCB_USB_ADC_TIM_RTOS_AUDIO/: .cproject  .mxproject  .project  PCB_Crystal_Clock.launch  PCB_USB_ADC_TIM_RTOS_AUDIO Debug.launch  PCB_USB_ADC_TIM_RTOS_AUDIO.ioc  PCB_USB_ADC_TIM_RTOS_AUDIO.launch
firmware/PCB_USB_ADC_TIM_RTOS_IMU/: .mxproject  .project  PCB_USB Debug.launch  PCB_USB.launch  PCB_USB2 Debug.launch  PCB_USB_ADC_TIM Debug.launch  PCB_USB_ADC_TIM_RTOS_IMU Debug.launch  PCB_USB_ADC_TIM_RTOS_IMU.ioc
firmware/RTOS_audio/: .cproject  .mxproject  .project  RTOS_audio.ioc
firmware/RTOS_audio2/: .project  RTOS_audio Debug.launch  RTOS_audio2 Debug.launch  RTOS_audio2.ioc
jig/: pitch_jerk.ino  yaw_jerk.ino
src/: CSVtoGraph.py  REKF.py  audio_data_1600.csv  audio_data_3200.csv  audio_data_800.csv  fft.py  filters.py  outputs.py  prototypes.py  serial_pipeline.py  stm32_debug_print.py
(+456 files in other folders)
