[tool.poetry]
name = "ratatouille"
version = "0.1.0"
description = ""
authors = ["Maciej <maciejkkowalski1@gmail.com>"]
packages = [
    { include = "ratatouille", from = "src" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyserial = "^3.5"
pynput = "^1.7.7"
numpy = "^2.2.0"
ahrs = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
